plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.6'
}

group = 'me.lulu'
version = '1.21.11-0.1.2'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

processResources {
    filesMatching('plugin.yml') {
        expand 'pluginVersion': project.version
    }
}

shadowJar {
    relocate("org.apache", "org.mcwonderland.uhc.lib.apache")
    archiveClassifier.set("")
}

repositories {
    mavenLocal()
    mavenCentral()
    flatDir { dir("./libs") }

    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    maven { url 'https://nexus.scarsz.me/content/groups/public/' }


    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://oss.sonatype.org/content/groups/public/' }
    maven { url 'https://repo.papermc.io/repository/maven-public/' }

    if (project.hasProperty('useNaluwanRepo')) {
        maven {
            name = "naluwan"
            url = uri("https://repo.naluwan.net/public-snapshot")
        }
    }
}

dependencies {
    compileOnly 'com.discordsrv:discordsrv:1.30.5'
    compileOnly 'net.luckperms:api:5.5'

    compileOnly name: 'Chunky-Bukkit-1.4.40'

    compileOnly 'io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT'

    implementation 'commons-lang:commons-lang:2.6'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.projectlombok:lombok:1.18.44'

    testCompileOnly 'org.projectlombok:lombok:1.18.44'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.44'

    testImplementation 'io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT'
    testImplementation 'junit:junit:4.13'
}

test {
    useJUnit()

    maxHeapSize = '1G'
}

configurations {
    testCompileOnly.extendsFrom compileOnly
}

tasks.withType(JavaCompile).configureEach {
    options.release.set(21)
    options.forkOptions.jvmArgs.addAll(['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'])
}
